# iapws95_rust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
benches/: iapws95_bench.rs  thermo_properties.rs
demo/: Makefile  c_example.c  iapws95.h  iapws95_usage.py  plot_mollier.py
docs/: technical_documentation.md
examples/: basic_usage.rs  benchmark.rs  benchmark_compare.rs  mollier_diagram.rs  test_new_properties.rs
src/: c_iapws95.rs  iapws95.h  iapws95.rs  iapws95_ideal.rs  iapws95_pt.rs  iapws95_residual.rs  iapws95_residual_direct.rs  iapws95_saturation.rs  lib.rs  py_iapws95.rs
tests/: T_saturation_table8.rs  pt_test.rs  td_data.rs  td_free_energy.rs  td_new_properties.rs  td_test.rs  td_test_95_97.rs  td_test_debug.rs  td_test_table7.rs
