[package]
name = "iapws95"
version = "0.1.0"
edition = "2021"
description = "IAPWS-95 Thermodynamic Properties Library for Water/Steam - Rust Implementation"
repository = "https://github.com/thermalogic/iapws95_rust"
license = "MIT"

[lib]
name = "iapws95"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# ==========================================================================
# Dependencies
# ==========================================================================

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

# ==========================================================================
# Features
# ==========================================================================

[features]
default = []

# Python bindings - enables PyO3-based Python extension module
python = ["pyo3"]

# C FFI bindings - enables C-compatible interface (always available, no feature flag needed)
cffi = []

# All optional features - includes both Python and C FFI bindings
all-bindings = ["python", "cffi"]

# ==========================================================================
# Development Dependencies
# ==========================================================================

[dev-dependencies]
assert_approx_eq = "1.1.0"
plotters = { version = "0.3", features = ["all_series"] }
