[package]
name = "iapws95"
version = "0.1.0"
edition = "2021"
description = "IAPWS-95 Thermodynamic Properties Library for Water/Steam - Rust Implementation"
repository = "https://github.com/thermalogic/iapws95_rust"
license = "MIT"

[lib]
name = "iapws95"
path = "src/lib.rs"
crate-type = ["rlib"]

# ==========================================================================
# Dependencies
# ==========================================================================

# ==========================================================================
# Development Dependencies
# ==========================================================================

[dev-dependencies]
assert_approx_eq = "1.1.0"
