[package]
name = "iapws95"
version = "0.1.6"
edition = "2021"
description = "IAPWS-95 Thermodynamic Properties Library for Water/Steam - Rust Implementation"
repository = "https://github.com/thermalogic/iapws95_rust"
license = "MIT"

[lib]
name = "iapws95"
path = "src/lib.rs"
crate-type = ["rlib"]

# ==========================================================================
# Dependencies
# ==========================================================================

# ==========================================================================
# Development Dependencies
# ==========================================================================

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

# ==========================================================================
# Build Profiles
# ==========================================================================

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release.build-override]
opt-level = 0

[[bench]]
name = "iapws95_bench"
harness = false
